# rosbag2_service

./: .gitmodules  Dockerfile  LICENSE  README.md  build_docker.sh
docker/: dev_docker.sh  run_docker.sh
rosbag2_service_msg/: CMakeLists.txt  package.xml
rosbag2_service_msg/srv/: Rosbag.srv  RosbagSave.srv  RosbagStart.srv
rosbag2_service_node/: CMakeLists.txt  package.xml
rosbag2_service_node/config/: params.sample.yaml  params.yaml
rosbag2_service_node/include/: errors.hpp  rosbag2_service.hpp
rosbag2_service_node/launch/: start_launch.py
rosbag2_service_node/src/: main.cpp  rosbag2_service.cpp
