<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_service</name>
  <version>1.0.0</version>
  <description>Node that implements services related to rosbag2</description>
  <maintainer email="support.idi@movvo.eu">
      Bernat Gastón, Maria Mercadé Martí bolet
  </maintainer>
  <license>Movvo Robotics - MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_compression_zstd</depend>
  <depend>rosbag2_service_msg</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <test_depend>ament_cmake_gtest</test_depend>
</package>
